--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
     font-size: 20px;
     color: rgb(250, 250, 250);
 }
-header{
+.header{
     background-color: rgb(0, 0, 0);
     color: rgb(250, 250, 250);
     display: flex;
@@ -31,7 +31,6 @@ header{
                                             /* body del home */
 .bodyhome{
     background-color: rgb(0, 0, 0);
-    padding: 20px;
 }
 .carrusel{
     height: 500px;
@@ -61,7 +60,7 @@ header{
 
                                 @media screen and (min-width: 768px) {
    .bodyhome{
-    background-color:rgb(10, 10, 10) ;
+    background-color:rgb(0, 0, 0) ;
    }
    .navbar-brand{
     display: none;
@@ -77,39 +76,107 @@ header{
         justify-content: end;
         font-size: 20px;    }
     .carrusel{
-        height: 850px;
-        width: 700px;
+        height: 900px;
     }
     
 }
 
 /* Página Nosotros */
 
-#nosotros{
+.imgnosotros{
     width: 100%;
     display: flex;
 }
 .bodynosotros{
     background-color: rgb(0, 0, 0);
-    padding: 20px;
+    padding: 20px;}
+.span{
+        font-size: 20px;
+        color: white;
+        display: flex;
+        justify-content: center;
+    }
 
-}
 .parrafo{
     color: rgb(250, 250, 250);
     text-align: center;
 }
-/* mediaquery nosotros */
-
+                            /* mediaquery nosotros */
 @media screen and (min-width: 768px) {
 .bodynosotros{
-    background-color: rgb(10, 10, 10);
+    background-color: rgb(0, 0, 0);
 }
-#nosotros{
-width: 90%;}
+.span{
+    font-size: 30px;
+    color: white;
+    display: flex;
+    justify-content: center;
+}
+.imgnosotros{
+    width: 75%;
+}
+.nosotros{
+    display: flex;
+    justify-content: center;
+}
+.parrafo{
+    margin-left:  10%;
+    margin-right: 10%;
+}
+}
+                        /* Página Productos */
+.titulos{
+    color: white;
+    text-align: center;
+    margin: 10px;
+}
+.fondo{
+    background-color: rgb(0, 0, 0);
+}
+.listas{
+    color: white;
+}
+.product{
+    margin: 20px;
+    width: 90%;
+    display: flex;
+}
+@media screen and (min-width: 768px) {
+.product{
+    height: 800px;
+    width: 600px;
+}
+.titulos{
+text-align: left;
+margin-left: 20px;
+}
 
+}
+                            /* Página Clientes */
 
+.img-fluid{
+    padding: 10px;
+}
 
+@media screen and (min-width: 768px) {
+.cliente{
+display: flex;
+flex-wrap: wrap;
+justify-content: space-around;
+padding-left: 60px;
+}
+}
+                                    /* Página de contacto */
 
+.formulario{
+    color: white;
+    display: grid;
+    justify-content: center;
+}
+@media screen and (min-width: 768px) {
+#nombre{
+    width: 500px;
+}
 
 
 }
