--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,5 +1,12 @@
 .header {
-    background-color: rgb(0, 0, 0);
-    color: rgb(250, 250, 250);
+    background-color: map-get($colors , headerFondoColor );
+    
+    @extend %titulosBase;
     display: flex;
+  }
+
+  .titulo{
+    align-items: center;
+    align-self: center;
+    align-content: center;
   }
