--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,11 @@
+.header {
+  text-align: center;
+  color: rgb(255, 255, 255);
+  margin: 1px;
+  padding: 1px;
+  font-family: "Montserrat", sans-serif;
+}
+
 .menu {
   background-color: rgb(0, 0, 0);
 }
@@ -19,9 +27,14 @@
 }
 
 .header {
-  background-color: rgb(0, 0, 0);
-  color: rgb(250, 250, 250);
+  background-color: rgb(105, 14, 14);
   display: flex;
+}
+
+.titulo {
+  align-items: center;
+  align-self: center;
+  align-content: center;
 }
 
 .titulos {
