--- a/styles/style.css
+++ b/styles/style.css
@@ -77,4 +77,17 @@
 }
 .footer .footer ul li .footer ul li a {
   color: blueviolet;
+  margin: 2px;
+  padding: 5px;
+  background-color: red;
+  color: white;
+  border: 3px solid black;
+}
+
+.botones {
+  margin: 2px;
+  padding: 5px;
+  background-color: rgb(143, 134, 134);
+  color: rgb(255, 255, 255);
+  border: 3px solid black;
 }/*# sourceMappingURL=style.css.map */
