--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -2,12 +2,18 @@
     color: white;
     text-align: center;
     text-decoration: none;
-
+    
 .footer ul li{
     list-style: none;
 
 .footer ul li a{
     color: blueviolet;
+    @include footerLinks ($bgColor: red, $textColor: white, $borderColor: black);
 }
     }
         }
+
+.botones{
+    @include button ($bgColor: rgb(143, 134, 134), $textColor: rgb(255, 255, 255), $borderColor: black);
+
+}
