--- a/styles/partials/variables/_mixins.scss
+++ b/styles/partials/variables/_mixins.scss
@@ -6,3 +6,12 @@
     border: 3px solid $borderColor ;
     
 }
+
+@mixin button($bgColor, $textColor, $borderColor) {
+    margin: 2px;
+    padding: 5px;
+    background-color: $bgColor;
+    color: $textColor;
+    border: 3px solid $borderColor;
+    
+}
