--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,1 +1,1 @@
-@import "./partials/variables/maps" ,"./partials/variables/extends", "./partials/variables/mixins" ,"./partials/nav" , "./partials/header" , "./partials/Productos" , "./partials/footer" ;
+@import "./partials/variables/maps" , "./partials/variables/extends" , "./partials/nav" , "./partials/header" , "./partials/Productos" , "./partials/footer" ,"./partials/nosotros" , "./partials/variables/titulos" , "./partials/contacto" , "./partials/clientes" ,"./partials/index" ;
