--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,16 @@
 }
 
 .navbar-brand {
-  color: rgb(240, 240, 240);
+  color: rgb(0, 0, 0);
+  display: none;
+}
+
+.navbar-toggler {
+  margin-left: 35px;
+}
+
+.nav-link:hover {
+  color: rgb(255, 0, 0);
 }
 
 .nav-link {
@@ -26,6 +35,13 @@
   background-color: rgb(240, 240, 240);
 }
 
+@media screen and (min-width: 768px) {
+  #navbarNav {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 100px;
+  }
+}
 .header {
   background-color: rgb(0, 0, 0);
   display: flex;
@@ -49,9 +65,11 @@
 
 .listas {
   color: white;
+  padding-right: 50px;
 }
 
 .product {
+  border-radius: 20%;
   margin: 20px;
   width: 90%;
   display: flex;
@@ -61,10 +79,16 @@
   .product {
     height: 800px;
     width: 600px;
+    border-radius: 50px;
   }
   .titulos {
-    text-align: left;
+    text-align: center;
     margin-left: 20px;
+  }
+  .productos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 .footer {
@@ -77,17 +101,94 @@
 }
 .footer .footer ul li .footer ul li a {
   color: blueviolet;
-  margin: 2px;
-  padding: 5px;
-  background-color: red;
-  color: white;
-  border: 3px solid black;
 }
 
-.botones {
-  margin: 2px;
-  padding: 5px;
-  background-color: rgb(143, 134, 134);
+.imgnosotros {
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .parrafo {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+}
+.titulo {
+  padding-top: 25px;
+  text-align: center;
+  font-size: 20px;
+  color: rgb(250, 250, 250);
+}
+
+.parrafo {
+  color: rgb(250, 250, 250);
+  text-align: center;
+}
+
+.formulario {
+  display: flex;
+  flex-direction: column;
+  padding: 100px;
   color: rgb(255, 255, 255);
-  border: 3px solid black;
+  text-align: center;
+}
+
+.button {
+  margin: 5px;
+}
+
+@media screen and (min-width: 768px) {
+  .formulario {
+    padding-left: 600px;
+    padding-right: 600px;
+  }
+  .button {
+    margin: 5px;
+    margin-left: 200px;
+    margin-right: 200px;
+  }
+  .tyc {
+    text-align: center;
+  }
+}
+.cliente {
+  padding: 25px;
+}
+
+.img-fluid {
+  padding-top: 50px;
+  border-radius: 20%;
+}
+
+@media screen and (min-width: 768px) {
+  .cliente {
+    padding-left: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  .img-fluid {
+    border-radius: 10%;
+  }
+}
+.titulocarrusel {
+  color: rgb(255, 255, 255);
+  justify-content: center;
+  text-align: center;
+}
+
+.carousel-indicators {
+  padding: 10px;
+}
+
+.carrusel {
+  border-radius: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .carrusel {
+    border-radius: 50px;
+    height: 1600px;
+  }
 }/*# sourceMappingURL=style.css.map */
