--- a/styles/partials/_Productos.scss
+++ b/styles/partials/_Productos.scss
@@ -1,39 +1,34 @@
-.titulos {
-    color: white;
-    text-align: center;
-    margin: 10px;
-  }
-  
-  .fondo {
-    background-color: rgb(0, 0, 0);
-  }
-  
-  .listas {
-    color: white;
-    padding-right: 50px;
-  }
-  
-  .product {
-    border-radius: 20%;
-    margin: 20px;
-    width: 90%;
+.caracteristicas{
+  display: flex;
+  flex-direction: column;
+}
+.premium
+{ background-color: rgb(172 211 188);
+  color: rgb(0, 0, 0);
+  width: 100%;
+  padding: 50px;
+}
+.classic{
+  background-color:  rgb(183 216 219);
+    color: rgb(0, 0, 0);
+    width: 100%;
+    padding: 50px;
+}
+.titulo-lista{
+  padding: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .caracteristicas{
     display: flex;
-
+    flex-direction: row;
   }
-  @media screen and (min-width: 768px) {
-    .product {
-      height: 800px;
-      width: 600px;
-      border-radius: 50px;
+  .premium
+  {
+    width: 50%;
+  }
+  .classic{
+      width: 50%;
+  }
 
-    }
-    .titulos {
-      text-align: center;
-      margin-left: 20px;
-    }
-    .productos{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-  }  
+}
