--- a/styles/partials/_contacto.scss
+++ b/styles/partials/_contacto.scss
@@ -1,24 +1,54 @@
 .formulario {
     display: flex;
     flex-direction: column ;
-    padding: 100px;
+    padding: 100px 50px;
+    font-size: 20px;
     color: rgb(255, 255, 255);
-    text-align: center;
+    text-align: left;
 }
-.button{
-    margin: 5px;
+#form{
+    background-color: black;
+}
+.p-contacto{
+    color: white;
+    text-align: center;
+    padding: 10px;
 }
 @media screen and (min-width: 768px) {
-.formulario{
-padding-left: 600px;
-padding-right: 600px;
+
+.texto{
+width: 500px;
+display: flex;
+flex-direction: column;
+align-self: left;
 }
-.button{
-    margin: 5px;
-    margin-left: 200px;
-    margin-right: 200px;
+
+.button-contact{
+margin: 10px;
+width: 250px;
+flex-direction: column;
+align-self: center;
+
 }
 .tyc{
-    text-align: center;
+    text-align: left;
+    margin: 10px;
 }
+#form{
+    height: 1000px;
+    display: flex;
+    justify-content: left;
+    justify-self: left;
+align-items: center;
 }
+#escribinos{
+    height: 200px;
+}
+.p-contacto{
+    padding-bottom: 100px;
+    padding-right: 20px;
+    font-weight: 500;
+    font-size: 20px;
+    text-align: left;
+}
+                                }
