--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -1,13 +1,60 @@
 .footer{
-    color: white;
-    text-align: center;
+    background-color: rgb(0, 0, 0);
+    height: auto;
+    color: rgb(255, 255, 255);
+    text-align: left;
     text-decoration: none;
-    
-.footer ul li{
+    padding: 25px 0px;
+    border-top: solid 1px rgb(255, 255, 255);
+    width: 100%;
     list-style: none;
+    display: flex;
+    flex-direction: column;
+.footer-display{
+    display: flex;
+    flex-direction: column;
 
-.footer ul li a{
-    color: blueviolet;
+.footer-list{
+    list-style: none;  
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     align-self: center;
+     margin: 10px;
+
+
+.footer-a{
+   margin: 10px;
+
+
+
 }
     }
-        }
+        } 
+    }
+        .parrafo-footer{
+            align-self: center;
+            align-items: center;
+    }
+    .map{
+        align-self: center;
+        width: auto;
+    }   
+
+@media screen and (min-width: 768px) {
+    .footer{
+        height: auto;
+    text-align: center;
+    padding: 25px 0px;
+    width: 100%;
+    list-style: none;
+.footer-display{
+    display: flex;
+    flex-direction: row;
+}
+    }
+    .map{
+        align-self: center;
+        width: 30%;
+    }
+}
