--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,12 +1,58 @@
 .header {
-    background-color: map-get($colors , headerFondoColor );
-    
-    @extend %titulosBase;
-    display: flex;
-  }
+  background-image: url(/image/fondo.png) ;
 
-  .titulo{
-    align-items: center;
-    align-self: center;
-    align-content: center;
   }
+.titulo{
+  color: rgb(255, 255, 255);
+}
+  .menu{
+    background-color: rgb(0 0 0 / 29%);
+    border-bottom: solid 1px white;
+  }
+  .logo{
+    width: 40%;
+    padding: 20px 0px;
+  }
+  .navbar .container-fluid{
+    justify-content: space-around;
+  }
+ .contenedor-titulo{
+  text-align: left;
+  padding: 10%;
+ }
+ .bajada-titulo-index{
+  font-size: 1rem;
+  line-height: 30px;
+  color: rgb(255, 255, 255);
+ }
+ .navbar-nav{
+  text-align: center;
+  text-transform: uppercase;
+ }
+
+ @media screen and (min-width: 768px) {
+  .header {
+    background-image: url(/image/fondo.png) ;
+    height: 100vh;
+    }
+    .menu{
+      background-color: rgb(0 0 0 / 29%);
+      border-bottom: solid 1px rgb(255, 255, 255);
+    }
+    .logo{
+      width: 12%;
+      padding: 20px;
+      margin-left: 5%;
+    }
+   .contenedor-titulo{
+    margin: 100px 0px;
+    text-align: left;
+    padding-left: 5%;
+   }
+   .bajada-titulo-index{
+    font-size: 20px;
+    line-height: 20px;
+    margin: 0px 0px;
+   }
+
+}
