--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -6,12 +6,82 @@
 .carousel-indicators{
    padding: 10px;
 }
-.carrusel{
-    border-radius: 10px;
+
+.h1{
+    font-size: 20px;
+}
+
+.productos{
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+.index-text{
+    background-color: black;
+    color: rgb(255, 255, 255);
+    margin-bottom: 50px;
+    padding: 20px;
+}
+.p{
+    display: flex;
+}
+
+.button{
+    color: rgb(0, 0, 0);
+    font-weight: 700;
+    border: solid;
+    padding: 15px 25px;
+    text-decoration: none;
+}
+a:hover{
+    color: rgb(0, 0, 0);
 }
 @media screen and (min-width: 768px) {
-.carrusel{
-    border-radius: 50px;
-    height: 1600px;
+
+    .titulocarrusel{
+        color: rgb(255, 255, 255);
+        justify-content: center;
+        text-align: center;
+    }
+    .carousel-indicators{
+       padding: 10px;
+    }
+    
+    .h1{
+        font-size: 50px;
+    }
+    
+    .productos{
+        margin-top: 100px;
+        margin-bottom: 100px;
+        display: flex;
+    }
+    .index-text{
+        background-color: black;
+        color: rgb(255, 255, 255);
+        flex-direction: row;
+        margin: 0px 0px 30px 0px;
+
+    }
+    .row{
+        display: flex;
+        flex-direction: row;
+    }
+    .carrusel{
+        width: 50%;
+    }
+    
+    
+.button{
+    color: rgb(0, 0, 0);
+    font-weight: 700;
+    border: solid;
+    padding: 15px 25px;
+    text-decoration: none;
+}
+
+.button:hover{
+    background-color: red;
+    color: white;
+    border: solid red;
 }
 }
