--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,10 @@
-.header {
-  text-align: center;
-  color: rgb(255, 255, 255);
-  margin: 1px;
-  padding: 1px;
-  font-family: "Montserrat", sans-serif;
+/* media query tablet  */
+@media screen and (min-width: 768px) {
+  #navbarNav {
+    display: flex;
+    justify-content: center;
+  }
 }
-
 .menu {
   background-color: rgb(0, 0, 0);
 }
@@ -35,7 +34,7 @@
   background-color: rgb(240, 240, 240);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 992px) {
   #navbarNav {
     display: flex;
     justify-content: flex-end;
@@ -43,113 +42,253 @@
   }
 }
 .header {
-  background-color: rgb(0, 0, 0);
-  display: flex;
+  background-image: url(/image/fondo.png);
 }
 
 .titulo {
-  align-items: center;
-  align-self: center;
-  align-content: center;
+  color: rgb(255, 255, 255);
 }
 
-.titulos {
-  color: white;
+.menu {
+  background-color: rgba(0, 0, 0, 0.29);
+  border-bottom: solid 1px white;
+}
+
+.logo {
+  width: 40%;
+  padding: 20px 0px;
+}
+
+.navbar .container-fluid {
+  justify-content: space-around;
+}
+
+.contenedor-titulo {
+  text-align: left;
+  padding: 10%;
+}
+
+.bajada-titulo-index {
+  font-size: 1rem;
+  line-height: 30px;
+  color: rgb(255, 255, 255);
+}
+
+.navbar-nav {
   text-align: center;
-  margin: 10px;
-}
-
-.fondo {
-  background-color: rgb(0, 0, 0);
-}
-
-.listas {
-  color: white;
-  padding-right: 50px;
-}
-
-.product {
-  border-radius: 20%;
-  margin: 20px;
-  width: 90%;
-  display: flex;
+  text-transform: uppercase;
 }
 
 @media screen and (min-width: 768px) {
-  .product {
-    height: 800px;
-    width: 600px;
-    border-radius: 50px;
+  .header {
+    background-image: url(/image/fondo.png);
+    height: 100vh;
   }
-  .titulos {
-    text-align: center;
-    margin-left: 20px;
+  .menu {
+    background-color: rgba(0, 0, 0, 0.29);
+    border-bottom: solid 1px rgb(255, 255, 255);
   }
-  .productos {
+  .logo {
+    width: 12%;
+    padding: 20px;
+    margin-left: 5%;
+  }
+  .contenedor-titulo {
+    margin: 100px 0px;
+    text-align: left;
+    padding-left: 5%;
+  }
+  .bajada-titulo-index {
+    font-size: 20px;
+    line-height: 20px;
+    margin: 0px 0px;
+  }
+}
+.caracteristicas {
+  display: flex;
+  flex-direction: column;
+}
+
+.premium {
+  background-color: rgb(172, 211, 188);
+  color: rgb(0, 0, 0);
+  width: 100%;
+  padding: 50px;
+}
+
+.classic {
+  background-color: rgb(183, 216, 219);
+  color: rgb(0, 0, 0);
+  width: 100%;
+  padding: 50px;
+}
+
+.titulo-lista {
+  padding: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .caracteristicas {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+  }
+  .premium {
+    width: 50%;
+  }
+  .classic {
+    width: 50%;
   }
 }
 .footer {
-  color: white;
-  text-align: center;
+  background-color: rgb(0, 0, 0);
+  height: auto;
+  color: rgb(255, 255, 255);
+  text-align: left;
   text-decoration: none;
-}
-.footer .footer ul li {
+  padding: 25px 0px;
+  border-top: solid 1px rgb(255, 255, 255);
+  width: 100%;
   list-style: none;
+  display: flex;
+  flex-direction: column;
 }
-.footer .footer ul li .footer ul li a {
-  color: blueviolet;
+.footer .footer-display {
+  display: flex;
+  flex-direction: column;
+}
+.footer .footer-display .footer-list {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  margin: 10px;
+}
+.footer .footer-display .footer-list .footer-a {
+  margin: 10px;
 }
 
-.imgnosotros {
-  width: 100%;
-  height: 100%;
+.parrafo-footer {
+  align-self: center;
+  align-items: center;
+}
+
+.map {
+  align-self: center;
+  width: auto;
 }
 
 @media screen and (min-width: 768px) {
-  .parrafo {
-    padding-left: 100px;
-    padding-right: 100px;
+  .footer {
+    height: auto;
+    text-align: center;
+    padding: 25px 0px;
+    width: 100%;
+    list-style: none;
+  }
+  .footer .footer-display {
+    display: flex;
+    flex-direction: row;
+  }
+  .map {
+    align-self: center;
+    width: 30%;
   }
 }
-.titulo {
-  padding-top: 25px;
-  text-align: center;
-  font-size: 20px;
-  color: rgb(250, 250, 250);
+.imgnosotros {
+  width: 160%;
+}
+
+.main-nos {
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  flex-direction: column;
 }
 
 .parrafo {
-  color: rgb(250, 250, 250);
-  text-align: center;
-}
-
-.formulario {
-  display: flex;
-  flex-direction: column;
-  padding: 100px;
   color: rgb(255, 255, 255);
   text-align: center;
 }
 
-.button {
-  margin: 5px;
+.div-img {
+  width: 60%;
+}
+
+.div-text {
+  width: 60%;
+  align-content: center;
+  align-self: center;
 }
 
 @media screen and (min-width: 768px) {
-  .formulario {
-    padding-left: 600px;
-    padding-right: 600px;
+  .imgnosotros {
+    width: 100%;
   }
-  .button {
-    margin: 5px;
-    margin-left: 200px;
-    margin-right: 200px;
+  .main-nos {
+    flex-direction: row;
+    height: 900px;
+  }
+  .div-img {
+    align-self: center;
+  }
+  .div-text {
+    width: 40%;
+    padding-right: 100px;
+    padding-top: 100px;
+  }
+}
+.formulario {
+  display: flex;
+  flex-direction: column;
+  padding: 100px 50px;
+  font-size: 20px;
+  color: rgb(255, 255, 255);
+  text-align: left;
+}
+
+#form {
+  background-color: black;
+}
+
+.p-contacto {
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .texto {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-self: left;
+  }
+  .button-contact {
+    margin: 10px;
+    width: 250px;
+    flex-direction: column;
+    align-self: center;
   }
   .tyc {
-    text-align: center;
+    text-align: left;
+    margin: 10px;
+  }
+  #form {
+    height: 1000px;
+    display: flex;
+    justify-content: left;
+    justify-self: left;
+    align-items: center;
+  }
+  #escribinos {
+    height: 200px;
+  }
+  .p-contacto {
+    padding-bottom: 100px;
+    padding-right: 20px;
+    font-weight: 500;
+    font-size: 20px;
+    text-align: left;
   }
 }
 .cliente {
@@ -161,7 +300,20 @@
   border-radius: 20%;
 }
 
+.card {
+  border: 1px solid rgb(50, 50, 50);
+  margin: 25px 15px;
+}
+
+.card:hover { /* IE 9 */ /* Safari 3-8 */
+  transform: scale(1.1);
+  transition: 0.3s;
+}
+
 @media screen and (min-width: 768px) {
+  .card {
+    width: 30rem;
+  }
   .cliente {
     padding-left: 100px;
     display: flex;
@@ -170,6 +322,10 @@
   }
   .img-fluid {
     border-radius: 10%;
+  }
+  .card {
+    border: 2px solid rgb(50, 50, 50);
+    margin-bottom: 150px;
   }
 }
 .titulocarrusel {
@@ -182,13 +338,78 @@
   padding: 10px;
 }
 
-.carrusel {
-  border-radius: 10px;
+.h1 {
+  font-size: 20px;
+}
+
+.productos {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.index-text {
+  background-color: black;
+  color: rgb(255, 255, 255);
+  margin-bottom: 50px;
+  padding: 20px;
+}
+
+.p {
+  display: flex;
+}
+
+.button {
+  color: rgb(0, 0, 0);
+  font-weight: 700;
+  border: solid;
+  padding: 15px 25px;
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgb(0, 0, 0);
 }
 
 @media screen and (min-width: 768px) {
+  .titulocarrusel {
+    color: rgb(255, 255, 255);
+    justify-content: center;
+    text-align: center;
+  }
+  .carousel-indicators {
+    padding: 10px;
+  }
+  .h1 {
+    font-size: 50px;
+  }
+  .productos {
+    margin-top: 100px;
+    margin-bottom: 100px;
+    display: flex;
+  }
+  .index-text {
+    background-color: black;
+    color: rgb(255, 255, 255);
+    flex-direction: row;
+    margin: 0px 0px 30px 0px;
+  }
+  .row {
+    display: flex;
+    flex-direction: row;
+  }
   .carrusel {
-    border-radius: 50px;
-    height: 1600px;
+    width: 50%;
+  }
+  .button {
+    color: rgb(0, 0, 0);
+    font-weight: 700;
+    border: solid;
+    padding: 15px 25px;
+    text-decoration: none;
+  }
+  .button:hover {
+    background-color: red;
+    color: white;
+    border: solid red;
   }
 }/*# sourceMappingURL=style.css.map */
