--- a/styles/partials/_contacto.scss
+++ b/styles/partials/_contacto.scss
@@ -7,10 +7,10 @@
     text-align: left;
 }
 #form{
-    background-color: black;
+    background-color: rgb(0, 0, 0);
 }
 .p-contacto{
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
     padding: 10px;
 }
