--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -7,7 +7,7 @@
 }
   .menu{
     background-color: rgb(0 0 0 / 29%);
-    border-bottom: solid 1px white;
+    border-bottom: solid 1px rgb(255, 255, 255);
   }
   .logo{
     width: 40%;
