--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -16,7 +16,7 @@
     margin-bottom: 100px;
 }
 .index-text{
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     margin-bottom: 50px;
     padding: 20px;
@@ -56,7 +56,7 @@ a:hover{
         display: flex;
     }
     .index-text{
-        background-color: black;
+        background-color: rgb(0, 0, 0);
         color: rgb(255, 255, 255);
         flex-direction: row;
         margin: 0px 0px 30px 0px;
@@ -80,8 +80,8 @@ a:hover{
 }
 
 .button:hover{
-    background-color: red;
-    color: white;
-    border: solid red;
+    background-color: rgb(255, 0, 0);
+    color: rgb(255, 255, 255);
+    border: solid rgb(255, 0, 0);
 }
 }
